<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_home_description_format">%1$s, %2$s</string>
    <string name="abc_action_bar_home_subtitle_description_format">%1$s, %2$s, %3$s</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="search_menu_title">Search</string>
    <string name="status_bar_notification_info_overflow">999+</string>
    <string name="Wednsday">周三</string>
    <string name="acceptProtocol">已经阅读接受协议</string>
    <string name="addplansuccess">添加训练计划成功</string>
    <string name="address">地址</string>
    <string name="adduser">请添加训练用户</string>
    <string name="age">年龄：</string>
    <string name="anmo">按摩</string>
    <string name="anmomoshi">按摩模式</string>
    <string name="anmozhouqi">按摩周期</string>
    <string name="anmozhouqigap">按摩周期必须介于1到%1$d之间</string>
    <string name="app_name">X EMS PRO</string>
    <string name="autologin">自动登录</string>
    <string name="avragestrength">平均最高强度</string>
    <string name="beibu">"背部
(背阔)"</string>
    <string name="bibu">臀部</string>
    <string name="birthday">生日</string>
    <string name="bluetooth_connect_failed">蓝牙设备连接失败</string>
    <string name="bluetooth_device">蓝牙设备</string>
    <string name="bodydata">体质数据</string>
    <string name="calendarreject">拒绝操作日历，将导致日历事项无法提醒</string>
    <string name="camera">相机</string>
    <string name="cancel">取消</string>
    <string name="changeLogo">更换Logo：</string>
    <string name="changeLogoText">更换Logo</string>
    <string name="city">城市</string>
    <string name="communicationfailed">通信失败</string>
    <string name="connect_failed">连接失败</string>
    <string name="count">次</string>
    <string name="customerdata">客户数据</string>
    <string name="customerrecorddata">客户训练记录</string>
    <string name="date">日期</string>
    <string name="day">天</string>
    <string name="defaultLogoText">默认Logo</string>
    <string name="delete">删除</string>
    <string name="denyWriteSetting">拒绝写入系统设置将导致一些操作无法生效</string>
    <string name="editmode">编辑模式</string>
    <string name="editparameter">默认模式</string>
    <string name="email">邮箱</string>
    <string name="exisitprogram">该事件点已经有训练计划了</string>
    <string name="existTime">训练时间</string>
    <string name="firmwareVersion">固件版本：</string>
    <string name="format_date_no_year">yyyy年MM月dd日</string>
    <string name="format_date_no_year2">%1$d年%2$d月%3$d日</string>
    <string name="format_date_no_year3">yyyy年MM月</string>
    <string name="format_time_hour_minute">%1$s:%2$s</string>
    <string name="foundVersion">发现新版本：V%1$s,是否更新？</string>
    <string name="frequenceerror">频率必须大于0小于100hz</string>
    <string name="frequency">频率</string>
    <string name="frequencygap">频率必须介于1到%1$d之间</string>
    <string name="frequencytext">频率</string>
    <string name="friday">周五</string>
    <string name="fubu">腹部</string>
    <string name="hardwareVersion">硬件版本：</string>
    <string name="height">身高</string>
    <string name="height2">身高(cm)</string>
    <string name="height3">身高：</string>
    <string name="heightValue">%1$dcm</string>
    <string name="hint">提示</string>
    <string name="hour">时</string>
    <string name="houxiefangji">"后斜方肌
(上背)"</string>
    <string name="id">ID</string>
    <string name="inputerror">输入错误</string>
    <string name="inputoutputramperror">inputramp和outputramp之和必须小于脉冲持续</string>
    <string name="inputramp">输入阶梯</string>
    <string name="inputramperror">inputramp必须大于1小于100</string>
    <string name="inputworktimelengtherror">工作时间必须大于1分钟小于99分钟</string>
    <string name="lightValue">%1$d</string>
    <string name="listview_header_hint_normal">下拉刷新</string>
    <string name="listview_header_hint_release">释放立即刷新</string>
    <string name="listview_header_last_time">上次更新时间：</string>
    <string name="listview_loading">正在加载...</string>
    <string name="loading_done">加载完成</string>
    <string name="location_permission_error">申请位置权限失败，将导致蓝牙无法通信，请在设置中打开位置权限</string>
    <string name="login">登录</string>
    <string name="logout">登出</string>
    <string name="maValue">%1$d mA</string>
    <string name="maikuan">脉宽</string>
    <string name="maikuangap">脉宽必须介于1到%1$d之间</string>
    <string name="maincontrol">主控端</string>
    <string name="maxbodystrenth">最大部位强度</string>
    <string name="maxlength">最高时长</string>
    <string name="minbodystrenth">最小部位强度</string>
    <string name="minute">分</string>
    <string name="monday">周一</string>
    <string name="moshi">模式</string>
    <string name="multi_mod">无线模式</string>
    <string name="muscleexist">肌肉训练</string>
    <string name="name">姓名</string>
    <string name="namecannotempty">名字不能为空</string>
    <string name="nan">男</string>
    <string name="network_error">网络异常</string>
    <string name="network_error2">网络异常,请联网后再上传头像</string>
    <string name="no_url">播放地址无效</string>
    <string name="nomore_loading">没有了</string>
    <string name="nv">女</string>
    <string name="ok">OK</string>
    <string name="outputramp">输出阶梯</string>
    <string name="outputramperror">outputramp必须大于1小于100</string>
    <string name="password">密码</string>
    <string name="passwordnull">密码不能为空</string>
    <string name="paulsecontinue">脉冲持续</string>
    <string name="paulsecontinuegap">脉冲持续必须介于1到%1$d之间</string>
    <string name="paulsestop">脉冲暂停</string>
    <string name="paulsestopgap">脉冲暂停必须介于1到%1$d之间</string>
    <string name="phone">手机</string>
    <string name="photoablum">图库</string>
    <string name="pickerview_cancel">取消</string>
    <string name="pickerview_day">日</string>
    <string name="pickerview_hours">时</string>
    <string name="pickerview_minutes">分</string>
    <string name="pickerview_month">月</string>
    <string name="pickerview_seconds">秒</string>
    <string name="pickerview_submit">确定</string>
    <string name="pickerview_year">年</string>
    <string name="plantitle">训练计划</string>
    <string name="plausecontinueerror">脉冲持续时间必须大于0小于60s</string>
    <string name="plausestoperror">脉冲暂停时间必须大于0小于60s</string>
    <string name="pleaseTakepicture">请先给用户拍照</string>
    <string name="pleaseaddress">请填写地址</string>
    <string name="pleasebirthday">请填写生日</string>
    <string name="pleasecity">请填写城市</string>
    <string name="pleaseemail">请填写用户邮箱</string>
    <string name="pleaseheight">请填写身高</string>
    <string name="pleaseid">请填写用户ID</string>
    <string name="pleaseinputname">请输入名字</string>
    <string name="pleasephone">请填写手机号码</string>
    <string name="pleaseprotocol">请同意注册协议</string>
    <string name="pleaseselectprogram">请选择训练计划</string>
    <string name="pleasesex">请填写性别</string>
    <string name="pleaseusername">请填写用户名字</string>
    <string name="pleaseweight">请填写体重</string>
    <string name="project">项目</string>
    <string name="refresh_done">刷新完成</string>
    <string name="refreshing">正在刷新...</string>
    <string name="registertime">注册时间</string>
    <string name="registprotocol">"\u0009\u0009\u0009\u0009\u0009\u0009\u0009\u0009\u0009\u0009\u0009\u0009\u0009\u0009\u0009\u0009\u0009\u0009\u0009\u0009\u0009\u0009客户同意意见书 
在开始XEMS专业训练前，请仔细阅读下列条件，并签字确认： 
♡如果在胸部或心脏区域出现不适、疾病、头晕或感觉疼痛，你必须立即停止训练，并将其报告给你的专业教练！ 
♡一旦设备启动，电缆电极不得重新连接或断开。请务必在你重新启动或断开电极之前，停止程序，关掉设备。风险等级高！ 
♡适当的电极贴片必须对应贴放在正确的身体部位。 
♡电极贴片不能直接放置在有皮肤表面受伤的区域，比如外伤伤口、炎症、皮肤烧伤、感染表面、湿疹等。 
♡如果你在训练过程中感到皮肤有任何不适或灼热感，你需要立即报告给你的教练，请求关闭设备，以免受伤！风险等级高 
♡被电脉冲刺激的四肢或躯干必须处于紧张状态，并由专业简练指导 
♡请严格遵循循序渐进的原则，电脉冲的频率一定要从低强度逐步增强 
♡训练前、训练中间隔休息以及训练后要注意摄入适当的水分 
♡训练前48小时之内禁止喝酒或摄入药物 
♡训练前4小时内保证正常饮食 
♡禁忌症（进行XEMS电脉冲训练前，一定要确定是否有以下禁忌症状或持有医生证明才可以进行训练） 
☞疯癫\u0009\u0009\u0009\u0009\u0009\u0009\u0009\u0009\u0009\u0009\u0009\u0009\u0009\u0009\u0009\u0009\u0009\u0009\u0009\u0009\u0009\u0009☞精神分裂症 
☞心脏病\u0009\u0009\u0009\u0009\u0009\u0009\u0009\u0009\u0009\u0009\u0009\u0009\u0009\u0009\u0009\u0009\u0009\u0009\u0009\u0009\u0009☞安装有心脏起搏器 
☞孕妇\u0009\u0009\u0009\u0009\u0009\u0009\u0009\u0009\u0009\u0009\u0009\u0009\u0009\u0009\u0009\u0009\u0009\u0009\u0009\u0009\u0009\u0009☞非训练状态下肌酸激酶含量过高，甲减、尿毒症等 
☞血友病\u0009\u0009\u0009\u0009\u0009\u0009\u0009\u0009\u0009\u0009\u0009\u0009\u0009\u0009\u0009\u0009\u0009\u0009\u0009\u0009\u0009☞腹壁疝气 
☞癌症患者\u0009\u0009\u0009\u0009\u0009\u0009\u0009\u0009\u0009\u0009\u0009\u0009\u0009\u0009\u0009\u0009\u0009\u0009\u0009\u0009☞血栓患者 
☞神经系统疾病\u0009\u0009\u0009\u0009\u0009\u0009\u0009\u0009\u0009\u0009\u0009\u0009\u0009\u0009\u0009\u0009\u0009☞糖尿病患者 
☞肺结核患者\u0009\u0009\u0009\u0009\u0009\u0009\u0009\u0009\u0009\u0009\u0009\u0009\u0009\u0009\u0009\u0009\u0009\u0009☞其他病毒性的发热症状、感染或验证 
☞药物治疗或用药史： 
[重要信息] 
若本人患有自身未知的疾病，对于训练后出现的异常状况，我自愿承担全部后果。 
通过签署客户同意意见书，我已经充分了解该意见书的全部内容。 
此外，我可以在此宣布，我并未患有任何疾病，或者我需要持有全面的体检报告或医生的特殊证明，来证明我可以参加XEMS 的训练课程。"</string>
    <string name="rememberpassword">记住密码</string>
    <string name="replay">重播</string>
    <string name="reset">重置</string>
    <string name="saturday">周六</string>
    <string name="save">保存</string>
    <string name="savefailed">保存失败</string>
    <string name="savesuccess">保存成功</string>
    <string name="screenlight">屏幕亮度：</string>
    <string name="selectday">请选择日期</string>
    <string name="selectprogram">请选择训练程序</string>
    <string name="selectprogram1">所选程序</string>
    <string name="selfdefine">备忘简讯</string>
    <string name="setlanguage">设置语言：</string>
    <string name="setleft">左手模式：</string>
    <string name="settime">系统时间：</string>
    <string name="setting">程序设置</string>
    <string name="sex">性别</string>
    <string name="shoubi">手臂</string>
    <string name="single_mod">有线模式</string>
    <string name="softwareVersion">软件版本：</string>
    <string name="strenth">强度</string>
    <string name="strenthtrain">强度训练</string>
    <string name="sunday">周日</string>
    <string name="sure">确定</string>
    <string name="suredeletetrainprogram">确定删除训练模式？</string>
    <string name="sureexitApp">确定退出应用？</string>
    <string name="thurday">周四</string>
    <string name="time">时间</string>
    <string name="tips_not_wifi">您当前正在使用移动网络，继续播放将消耗流量</string>
    <string name="tips_not_wifi_cancel">停止播放</string>
    <string name="tips_not_wifi_confirm">继续播放</string>
    <string name="tizhishuju">体质数据</string>
    <string name="today">今天</string>
    <string name="train">训练</string>
    <string name="trainValue">%1$dMin - %2$d/%3$ds - %4$dHz</string>
    <string name="train_plan">训练计划</string>
    <string name="train_program">训练程序</string>
    <string name="tuesday">周二</string>
    <string name="tuiquji">"腿屈肌
(后腿)"</string>
    <string name="user">用户</string>
    <string name="username">用户名</string>
    <string name="username_password_error">用户名或者密码错误</string>
    <string name="usernamenull">用户名不能为空</string>
    <string name="usetimelength">使用时长：</string>
    <string name="video">视频</string>
    <string name="weight">体重</string>
    <string name="weight2">体重：</string>
    <string name="weight3">体重(kg)</string>
    <string name="xiaotui">小腿</string>
    <string name="xiazhishenji">"下肢伸肌
(前腿)"</string>
    <string name="xiongbu">"胸部
(男)"</string>
    <string name="yaobu">"腰部
(下背)"</string>
</resources>