<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="horizontal" android:background="@color/light_gray_1" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="vertical" android:id="@id/leftLayout" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:layout_marginTop="5.0dip" android:layout_marginRight="15.0dip" android:layout_weight="10.0">
        <LinearLayout android:gravity="center_vertical" android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <View android:layout_width="0.0dip" android:layout_height="fill_parent" android:layout_weight="0.51" />
            <LinearLayout android:orientation="horizontal" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_weight="2.5">
                <LinearLayout android:gravity="center" android:orientation="vertical" android:id="@id/buwei1" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_weight="1.0">
                    <ImageView android:background="@mipmap/xiong" android:layout_width="35.0dip" android:layout_height="38.0dip" />
                    <TextView android:textSize="11.0sp" android:textColor="@color/light_black_color" android:gravity="center" android:layout_width="wrap_content" android:layout_height="fill_parent" android:text="@string/xiongbu" />
                    <ImageView android:background="@mipmap/sanjiaoxing" android:layout_width="wrap_content" android:layout_height="wrap_content" />
                </LinearLayout>
                <LinearLayout android:gravity="center" android:orientation="vertical" android:id="@id/buwei2" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_weight="1.0">
                    <ImageView android:background="@mipmap/fubu" android:layout_width="35.0dip" android:layout_height="38.0dip" />
                    <TextView android:textSize="11.0sp" android:textColor="@color/light_black_color" android:gravity="center" android:layout_width="wrap_content" android:layout_height="fill_parent" android:text="@string/fubu" />
                    <ImageView android:background="@mipmap/sanjiaoxing" android:layout_width="wrap_content" android:layout_height="wrap_content" />
                </LinearLayout>
                <LinearLayout android:gravity="center" android:orientation="vertical" android:id="@id/buwei3" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_weight="1.0">
                    <ImageView android:background="@mipmap/xiazhi" android:layout_width="35.0dip" android:layout_height="38.0dip" />
                    <TextView android:textSize="11.0sp" android:textColor="@color/light_black_color" android:gravity="center" android:layout_width="wrap_content" android:layout_height="fill_parent" android:text="@string/xiazhishenji" />
                    <ImageView android:background="@mipmap/sanjiaoxing" android:layout_width="wrap_content" android:layout_height="wrap_content" />
                </LinearLayout>
                <LinearLayout android:gravity="center" android:orientation="vertical" android:id="@id/buwei4" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_weight="1.0">
                    <ImageView android:background="@mipmap/xiaotui" android:layout_width="35.0dip" android:layout_height="38.0dip" />
                    <TextView android:textSize="11.0sp" android:textColor="@color/light_black_color" android:gravity="center" android:layout_width="wrap_content" android:layout_height="fill_parent" android:text="@string/xiaotui" />
                    <ImageView android:background="@mipmap/sanjiaoxing" android:layout_width="wrap_content" android:layout_height="wrap_content" />
                </LinearLayout>
                <LinearLayout android:gravity="center" android:orientation="vertical" android:id="@id/buwei5" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_weight="1.0">
                    <ImageView android:background="@mipmap/shoubi" android:layout_width="35.0dip" android:layout_height="38.0dip" />
                    <TextView android:textSize="11.0sp" android:textColor="@color/light_black_color" android:gravity="center" android:layout_width="wrap_content" android:layout_height="fill_parent" android:text="@string/shoubi" />
                    <ImageView android:background="@mipmap/sanjiaoxing" android:layout_width="wrap_content" android:layout_height="wrap_content" />
                </LinearLayout>
                <LinearLayout android:gravity="center" android:orientation="vertical" android:id="@id/buwei6" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_weight="1.0">
                    <ImageView android:background="@mipmap/houxie" android:layout_width="35.0dip" android:layout_height="38.0dip" />
                    <TextView android:textSize="11.0sp" android:textColor="@color/light_black_color" android:gravity="center" android:layout_width="wrap_content" android:layout_height="fill_parent" android:text="@string/houxiefangji" />
                    <ImageView android:background="@mipmap/sanjiaoxing" android:layout_width="wrap_content" android:layout_height="wrap_content" />
                </LinearLayout>
                <LinearLayout android:gravity="center" android:orientation="vertical" android:id="@id/buwei7" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_weight="1.0">
                    <ImageView android:background="@mipmap/bei" android:layout_width="35.0dip" android:layout_height="38.0dip" />
                    <TextView android:textSize="11.0sp" android:textColor="@color/light_black_color" android:gravity="center" android:layout_width="wrap_content" android:layout_height="fill_parent" android:text="@string/beibu" />
                    <ImageView android:background="@mipmap/sanjiaoxing" android:layout_width="wrap_content" android:layout_height="wrap_content" />
                </LinearLayout>
                <LinearLayout android:gravity="center" android:orientation="vertical" android:id="@id/buwei8" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_weight="1.0">
                    <ImageView android:background="@mipmap/yao" android:layout_width="35.0dip" android:layout_height="38.0dip" />
                    <TextView android:textSize="11.0sp" android:textColor="@color/light_black_color" android:gravity="center" android:layout_width="wrap_content" android:layout_height="fill_parent" android:text="@string/yaobu" />
                    <ImageView android:background="@mipmap/sanjiaoxing" android:layout_width="wrap_content" android:layout_height="wrap_content" />
                </LinearLayout>
                <LinearLayout android:gravity="center" android:orientation="vertical" android:id="@id/buwei9" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_weight="1.0">
                    <ImageView android:background="@mipmap/bibu" android:layout_width="35.0dip" android:layout_height="38.0dip" />
                    <TextView android:textSize="11.0sp" android:textColor="@color/light_black_color" android:gravity="center" android:layout_width="wrap_content" android:layout_height="fill_parent" android:text="@string/bibu" />
                    <ImageView android:background="@mipmap/sanjiaoxing" android:layout_width="wrap_content" android:layout_height="wrap_content" />
                </LinearLayout>
                <LinearLayout android:gravity="center" android:orientation="vertical" android:id="@id/buwei10" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_weight="1.0">
                    <ImageView android:background="@mipmap/tui" android:layout_width="35.0dip" android:layout_height="38.0dip" />
                    <TextView android:textSize="11.0sp" android:textColor="@color/light_black_color" android:gravity="center" android:layout_width="wrap_content" android:layout_height="fill_parent" android:text="@string/tuiquji" />
                    <ImageView android:background="@mipmap/sanjiaoxing" android:layout_width="wrap_content" android:layout_height="wrap_content" />
                </LinearLayout>
            </LinearLayout>
            <View android:layout_width="0.0dip" android:layout_height="fill_parent" android:layout_weight="0.8" />
            <LinearLayout android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_weight="0.8">
                <ImageView android:id="@id/logoImage" android:layout_width="200.0dip" android:layout_height="76.0dip" android:src="@mipmap/logo2" />
            </LinearLayout>
        </LinearLayout>
        <com.yanzhenjie.recyclerview.swipe.SwipeMenuRecyclerView android:id="@id/trainUserlistview" android:layout_width="fill_parent" android:layout_height="wrap_content" />
    </LinearLayout>
    <LinearLayout android:gravity="center" android:orientation="vertical" android:id="@id/rightLayout" android:background="@mipmap/verticalbar" android:layout_width="0.0dip" android:layout_height="fill_parent" android:layout_weight="0.7">
        <View android:layout_width="fill_parent" android:layout_height="0.0dip" android:layout_weight="0.3" />
        <com.isaigu.gymapp.widget.MyButton android:id="@id/allStop" android:background="@mipmap/tingzhi" android:layout_width="50.0dip" android:layout_height="50.0dip" />
        <View android:layout_width="fill_parent" android:layout_height="0.0dip" android:layout_weight="0.1" />
        <com.isaigu.gymapp.widget.MyButton android:id="@id/allStartPause" android:background="@mipmap/start" android:layout_width="50.0dip" android:layout_height="50.0dip" />
        <View android:layout_width="fill_parent" android:layout_height="0.0dip" android:layout_weight="1.0" />
        <com.isaigu.gymapp.widget.MyButton android:id="@id/allAdd" android:background="@mipmap/add" android:layout_width="50.0dip" android:layout_height="50.0dip" />
        <View android:layout_width="fill_parent" android:layout_height="0.0dip" android:layout_weight="0.1" />
        <com.isaigu.gymapp.widget.MyButton android:textSize="10.0sp" android:textColor="@color/white_color" android:id="@id/allPerson" android:background="@mipmap/zhukongduan" android:paddingTop="21.0dip" android:layout_width="55.0dip" android:layout_height="55.0dip" android:text="@string/maincontrol" />
        <View android:layout_width="fill_parent" android:layout_height="0.0dip" android:layout_weight="0.1" />
        <com.isaigu.gymapp.widget.MyButton android:id="@id/allminus" android:background="@mipmap/minus" android:layout_width="50.0dip" android:layout_height="50.0dip" />
        <View android:layout_width="fill_parent" android:layout_height="0.0dip" android:layout_weight="0.3" />
    </LinearLayout>
</LinearLayout>